--- a/src/main/resources/public/demo/extendsModule.html
+++ b/src/main/resources/public/demo/extendsModule.html
@@ -7,13 +7,11 @@
 <body>
 
 
-<script src="../layui/layui.js"></script>
+<script src="/layui/layui.js"></script>
 <script>
     //config的设置是全局的
     layui.config({
         base: '/myModule/' //假设这是你存放拓展模块的根目录
-    }).extend({ //设定模块别名
-        mymod: 'mymod' //如果 mymod.js 是在根目录，也可以不用设定别名
     });
 
     //使用拓展模块
